Compile, test and run under Java 11.