@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
-            <!-- in JDK 8, not in Java 9 -->
+            <!-- in JDK 8, add-module in Java 9, missing in Java 11 -->
             <!-- 
             <exclusions>
                 <exclusion>
@@ -61,7 +61,7 @@
             </exclusions>
             -->
         </dependency>
-        <!-- in JDK 8, not in Java 9 -->
+        <!-- in JDK 8, add-module in Java 9, missing in Java 11 -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
@@ -78,7 +78,7 @@
             <artifactId>jaxb-core</artifactId>
             <version>2.3.0</version>
         </dependency>        
-        <!-- API documentation -->
+         <!-- API documentation -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -197,6 +197,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <!-- mvn -Djava.version=9 clean verify -->
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>${java.version}</source>
@@ -227,31 +228,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <!-- mvn -Djdk.version=9 clean verify -->
-            <id>jdk-9-above</id>
-            <activation>
-                <property>
-                    <name>jdk.version</name>
-                </property>
-            </activation>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration>
-                            <source>${jdk.version}</source>
-                            <target>${jdk.version}</target>
-                            <compilerArgs>
-                                <arg>--add-modules</arg>
-                                <arg>java.xml.bind</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <!-- mvn verify -DskipTests -P dependency-check -->
             <id>dependency-check</id>
